Updated generated code
