# jaxrs-spec-generated/src/main/java/fi/metatavu/metamind/rest/api/StoriesApi.java
@@ -23,7 +23,7 @@ import javax.validation.Valid;
 
 @Path("/stories")
 
-@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.JavaJAXRSSpecServerCodegen", date = "2019-04-04T10:48:37.341+03:00[Europe/Helsinki]")
+@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.JavaJAXRSSpecServerCodegen", date = "2019-04-04T17:05:59.089+03:00[Europe/Helsinki]")
 public interface StoriesApi {
 
     @POST
@@ -301,7 +301,7 @@ public interface StoriesApi {
     @Operation(summary = "Updates intent", description = "Updates a intent", security = {
         @SecurityRequirement(name = "basicAuth")    }, tags={ "Intents" })
     @ApiResponses(value = { 
-        @ApiResponse(responseCode = "200", description = "Updated story intent", content = @Content(schema = @Schema(implementation = Story.class))),
+        @ApiResponse(responseCode = "200", description = "Updated story intent", content = @Content(schema = @Schema(implementation = Intent.class))),
         @ApiResponse(responseCode = "400", description = "Invalid request was sent to the server", content = @Content(schema = @Schema(implementation = ErrorResponse.class))),
         @ApiResponse(responseCode = "403", description = "Attempted to make a call with unauthorized client", content = @Content(schema = @Schema(implementation = ErrorResponse.class))),
         @ApiResponse(responseCode = "500", description = "Internal server error", content = @Content(schema = @Schema(implementation = ErrorResponse.class))) })
